# Rubiks-Cube-State-Recognition

./: .gitignore  README.md  pyproject.toml
src/rubiks_cube_state_recognition/: __main__.py
src/rubiks_cube_state_recognition/cube_capture/: ColourFinder.py  CubeFaceFinder.py  CubeStateFinder.py  Frame.py  LinkedList.py  Rectangle.py  VideoFeed.py
src/rubiks_cube_state_recognition/cube_state/: CubeState.py  CubiesState.py
src/rubiks_cube_state_recognition/pattern_database_creator/: IndexCalculator.py  PDNode.py  PatternDatabaseCreator.py
src/rubiks_cube_state_recognition/solution_finder/: ThistlethwaiteSolver.py  TreeNode.py
